package SmartHome.domain.sensor.simHardware;

public class SimHardware {
    public String getValue() {
        return "Sample";
    }
}
